--- a/resources/sass/coba-ci.scss
+++ b/resources/sass/coba-ci.scss
@@ -30,14 +30,11 @@ html, body, #app, #content {
 /*    display: flex;
     flex-direction: row;*/
     &.coba-page-no-header {
-        padding-top: 300px;
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: flex-end;
-    }
-    &.coba-page-lower-padding{
-        padding-top: 50%;
+        align-items: center;
+        min-height: 100%;
     }
 }
 
